--- a/RxReachability-Example/RxReachability_Example.xcodeproj/xcshareddata/xcschemes/RxReachability_Example.xcscheme
+++ b/RxReachability-Example/RxReachability_Example.xcodeproj/xcshareddata/xcschemes/RxReachability_Example.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "CCBEE27A79E0633426E1B5147A99C65D"
+               BuildableName = "RxReachability-Unit-RxReachabilityTests.xctest"
+               BlueprintName = "RxReachability-Unit-RxReachabilityTests"
+               ReferencedContainer = "container:Pods/RxReachability.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
